--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Map an array of numbers into their fractional ranks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava tests.js"
   },
   "keywords": [
     "rank",
@@ -17,5 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^3.10.1"
+  },
+  "devDependencies": {
+    "ava": "^0.8.0"
   }
 }
